add Color to Player
